--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -6618,3 +6618,75 @@
     model: U63 Plus
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SmartView_7_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MyPhone
+    model: SmartView 7" 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SmartView_8_LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.74 Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 95.0.4638.74
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MyPhone
+    model: SmartView 8" LTE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SmartView_9_6_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: MyPhone
+    model: SmartView 9.6" 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.0.1; Archos 101c Platinum Build/LRX22C) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.93 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 43.0.2357.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Archos
+    model: 101c Platinum
+  os_family: Android
+  browser_family: Chrome
