--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14161,7 +14161,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5004S|5087Z|5102[BKM]|5107G|5130[JM]|5133A|5152D|5159[AJ]|5199I|6125[FDH]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|6156H|T766H|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:_(?:RU|EEA))?(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|4187M|5004S|5087Z|5101A|5102[BKM]|5107G|5130[JM]|5133A|5152D|5159[AJ]|5199I|6125[FDH]|7040N|9048S|A50[279]DL|T78[02]H|T770[HB]|T774H|T671[HF]|T790Y|6156H|T766H|T766[AJU]|T799[BH]|T775H|Percee TV|BeyondTV\d?)(?:_(?:RU|EEA))?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -14188,6 +14188,8 @@ TCL:
       model: 'L7'
     - regex: '5159[AJ](?:[);/ ]|$)'
       model: 'L9'
+    - regex: '5101A(?:[);/ ]|$)'
+      model: 'L9 Plus'
     - regex: '5107G(?:[);/ ]|$)'
       model: 'L9S'
     - regex: '5130J(?:[);/ ]|$)'
